--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkGroup.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkGroup.formly.html
@@ -5,6 +5,7 @@
       <input id="{{options.key}}-{{choice}}" type="checkbox" class="big-checkbox" ng-model="model[options.key][choice]">
       <span dynamic-label key="{{to.code}}.{{choice}}.RBK"></span>
     </label>
-    <span wc-help-mark field-dynamic-help-text="{{to.code}}.{{choice}}.HLP"></span>
+    <span wc-help-chevron help-text-key="{{to.code}}.{{choice}}.HLP"></span>
+    <span wc-help-chevron-text help-text-key="{{to.code}}.{{choice}}.HLP"></span>
   </div>
 </div>
