--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
@@ -1,18 +1,20 @@
 <div>
-	<label class="control-label inline-block checkbox-inline bold big-checkbox-label check-multi-text__label">
+  <label class="control-label inline-block checkbox-inline bold big-checkbox-label check-multi-text__label">
     <input type="checkbox" class="big-checkbox" ng-model="to.open" ng-click="validate()">
     <span dynamic-label key="FRG_{{to.frgId}}.RBK"></span>
-    <span wc-help-mark field-dynamic-help-text="FRG_{{to.frgId}}.HLP"></span>
+    <span wc-help-chevron help-text-key="FRG_{{to.frgId}}.HLP"></span>
   </label>
+  <span wc-help-chevron-text help-text-key="FRG_{{to.frgId}}.HLP"></span>
 
   <wc-utkast-komplettering key="{{options.key}}" margin-top="true"></wc-utkast-komplettering>
 
   <div ng-if="to.open" class="fold-animation">
-		<label class="control-label inline-block webcert-top-padding-section" ng-class="{'bold' : to.bold}">
-        <span dynamic-label key="DFR_{{to.frgId}}.1.RBK"></span>
-        <span wc-help-mark field-dynamic-help-text="DFR_{{to.frgId}}.1.HLP"></span>
+    <label class="control-label inline-block webcert-top-padding-section" ng-class="{'bold' : to.bold}">
+      <span dynamic-label key="DFR_{{to.frgId}}.1.RBK"></span>
+      <span wc-help-chevron help-text-key="DFR_{{to.frgId}}.1.HLP"></span>
     </label>
-		<textarea id="{{options.key}}" name="{{options.key}}" rows="6" class="form-control" auto-expand ng-model="model[options.key]"
-              maxlength="4000" ng-blur="validate()"></textarea>
-	</div>
+    <span wc-help-chevron-text help-text-key="FRG_{{to.frgId}}.HLP"></span>
+    <textarea id="{{options.key}}" name="{{options.key}}" rows="6" class="form-control" auto-expand
+              ng-model="model[options.key]" maxlength="4000" ng-blur="validate()"></textarea>
+  </div>
 </div>
