--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
@@ -1,16 +1,18 @@
 <div class="form-horizontal row">
   <div class="col-md-6">
     <label class="checkbox-inline big-checkbox-label">
-        <input type="checkbox"
-               class="big-checkbox"
-               ng-model="formState[options.key].checked"
-               value="true">
-        <span dynamic-label ng-if="to.label" key="{{to.label}}.RBK"></span>
+      <input type="checkbox" class="big-checkbox" ng-model="formState[options.key].checked" value="true">
+      <span dynamic-label ng-if="to.label" key="{{to.label}}.RBK"></span>
     </label>
-    <span wc-help-mark ng-if="!to.disableHelp" field-dynamic-help-text="{{to.label + '.HLP'}}"></span>
+    <span ng-if="!to.disableHelp">
+      <span wc-help-chevron help-text-key="{{to.label + '.HLP'}}"></span>
+      <span wc-help-chevron-text help-text-key="{{to.label + '.HLP'}}"></span>
+    </span>
+
     <wc-utkast-komplettering key="{{options.key}}" margin-top="true"></wc-utkast-komplettering>
   </div>
   <div class="col-md-6">
-    <span wc-date-picker-field target-model="model[options.key]" add-date-parser="loose" on-blur="validate()" max-date="{{to.maxDate}}"></span>
+    <span wc-date-picker-field target-model="model[options.key]" add-date-parser="loose" on-blur="validate()"
+          max-date="{{to.maxDate}}"></span>
   </div>
 </div>
