INTYG-3764: chevrons ts-intyg.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -44,7 +44,8 @@
                 ng-disabled="viewState.common.intyg.isComplete">
           <span message key="draft.notify.check-missing"></span>
         </button>
-        <span wc-help-mark field-help-text="draft.notify.check-missing.help"></span>
+        <span wc-help-chevron help-text-key="draft.notify.check-missing.help"></span>
+        <span wc-help-chevron-text help-text-key="draft.notify.check-missing.help"></span>
       </div>
 
 
@@ -71,7 +72,8 @@
                 ng-class="{'forward-active': !viewState.draftModel.vidarebefordrad, 'forward-inactive': viewState.draftModel.vidarebefordrad}"></span>
              <span message key="draft.notify.button"></span>
           </button>
-          <span wc-help-mark field-help-text="draft.notify.help"></span>
+          <span wc-help-chevron help-text-key="draft.notify.help"></span>
+          <span wc-help-chevron-text help-text-key="draft.notify.help"></span>
         </div>
 
         <div class="intyg-block">
