--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFormLabel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFormLabel.directive.html
@@ -6,7 +6,7 @@
       <span ng-if="to.staticLabel">{{to.staticLabel}}</span>
       <span class="required">{{to.required ? '*' : ''}}</span>
       <span ng-if="hlpFrageId" wc-help-chevron help-text-key="{{hlpFrageId}}.HLP"></span>
-      <span ng-if="to.staticHelpId" wc-help-mark field-help-text="{{to.staticHelpId}}"></span>
+      <span ng-if="to.staticHelpId" wc-help-chevron help-text-key="{{to.staticHelpId}}"></span>
     </h4>
     <wc-utkast-komplettering ng-if="frageId && !to.forceHeadingTypeLabel" key="{{key}}"
                              margin-bottom="true"></wc-utkast-komplettering>
@@ -20,7 +20,7 @@
       <span ng-if="to.staticLabel">{{to.staticLabel}}</span>
       <span ng-if="!frageId" class="required">{{to.required == true ? '*' : ''}}</span>
       <span ng-if="delFrageId" wc-help-chevron help-text-key="{{delFrageId}}.HLP"></span>
-      <span ng-if="to.staticHelpId" wc-help-mark field-help-text="{{to.staticHelpId}}"></span>
+      <span ng-if="to.staticHelpId" wc-help-chevron help-text-key="{{to.staticHelpId}}"></span>
     </h5>
     <wc-utkast-komplettering ng-if="!frageId && delFrageId && !to.forceHeadingTypeLabel" key="{{key}}"
                              margin-bottom="true"></wc-utkast-komplettering>
@@ -34,7 +34,7 @@
       <span ng-if="to.staticLabel">{{to.staticLabel}}</span>
       <span class="required">{{to.required == true ? '*' : ''}}</span>
       <span ng-if="to.label" wc-help-chevron help-text-key="{{to.label}}.HLP"></span>
-      <span ng-if="to.staticHelpId" wc-help-mark field-help-text="{{to.staticHelpId}}"></span>
+      <span ng-if="to.staticHelpId" wc-help-chevron help-text-key="{{to.staticHelpId}}"></span>
     </label>
     <wc-utkast-komplettering ng-if="to.forceHeadingTypeLabel" key="{{key}}"
                              margin-bottom="true"></wc-utkast-komplettering>
