--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygMakulera.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygMakulera.dialog.html
@@ -14,7 +14,9 @@
     </div>
   </div>
   <div class="form-group makulera-choices">
-    Varför makulerar du intyget? <span ng-if="model.isFkIntyg" wc-help-mark field-help-text="intyg.makulera.help"></span><br>
+    Varför makulerar du intyget? <span ng-if="model.isFkIntyg"><span wc-help-chevron help-text-key="intyg.makulera.help"></span>
+    <span wc-help-chevron-text help-text-key="intyg.makulera.help"></span></span>
+    <br>
     <div ng-repeat="reason in model.choices">
       <label class="radio big-radio-label">
         <input id="reason-{{reason.value}}" name="reason-{{reason.value}}" type="radio" class="big-radio"
