--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcField.directive.html
@@ -8,8 +8,8 @@
       <span ng-if="fieldDynamicLabel" dynamic-label key="{{fieldDynamicLabel}}"></span>
       <span class="required">{{fieldRequired ? '*' : ''}}</span>
     </h3>
-    <span wc-help-chevron help-text-key="{{fieldDynamicHelpText}}"></span>
-    <span wc-help-chevron-text help-text-key="{{fieldDynamicHelpText}}"></span>
+    <span wc-help-chevron help-text-key="{{fieldHelpText}}"></span>
+    <span wc-help-chevron-text help-text-key="{{fieldHelpText}}"></span>
   </div>
   <span class="intyg-block__content" ng-class="{unfilled: filled == 'false', categoryerror: fieldHasErrors, categorykmplt: fieldHasKomplettering}">
     <span class="intyg-field-blank" ng-hide="filled == 'true'"> <span message key="common.notset"></span></span>
