INTYG-3620: Motsvarande ändringar som i WC, pga refaktorering av hur relationer sänds från backend till frontend

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -24,13 +24,13 @@
   <div wc-intyg-related-other-intyg-message
        view-state="viewState"
        text-before-relation="ersatts av"
-       relation="replacedByRelation">
+       intyg-relation="replacedByIntyg">
   </div>
 
   <div wc-intyg-related-other-intyg-message
        view-state="viewState"
        text-before-relation="kompletterats av"
-       relation="complementedByRelation">
+       intyg-relation="complementedByIntyg">
   </div>
 
   <div ng-show="!viewState.common.activeErrorMessageKey" id="intyg-vy-laddad">
