--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/komplettera/arendePanelSvarKompletteringsatgard.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/komplettera/arendePanelSvarKompletteringsatgard.directive.html
@@ -1,4 +1,5 @@
 <span>
-  <button class="btn btn-success" id="answer-kompletteringsatgard-open-{{arendeSvar.fragaInternReferens}}" ng-click="openKompletteringDialog()">Svara</button>
-  <button class="btn btn-success" ng-if="showGoToUtkastButton" id="answer-kompletteringsatgard-open-utkast-{{arendeSvar.fragaInternReferens}}" ng-click="openKompletteringsUtkast()">Fortsätt på intygsutkast</button>
+  <button class="btn btn-success" ng-if="!redirectToExistingUtkast" id="komplettera-intyg-{{arendeSvar.fragaInternReferens}}" ng-click="kompletteraIntyg()">Komplettera intyg</button>
+  <button class="btn btn-success" ng-if="redirectToExistingUtkast" id="komplettera-open-utkast-{{arendeSvar.fragaInternReferens}}" ng-click="openKompletteringsUtkast()">Fortsätt på intygsutkast</button>
+  <button class="btn btn-default" id="kan-inte-komplettera-{{arendeSvar.fragaInternReferens}}" ng-click="openKompletteringDialog()">Kan inte komplettera</button>
 </span>
