INTYG-4093: Tagit bort onödiga divar

--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/uvRenderComponents.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/uvRenderComponents.directive.html
@@ -1,5 +1,3 @@
-<div ng-if="viewData">
-  <div ng-repeat="itemConfig in config">
-    <uv-dynamic-component config="itemConfig" view-data="viewData" />
-  </div>
+<div ng-if="viewData" ng-repeat="itemConfig in config">
+  <uv-dynamic-component config="itemConfig" view-data="viewData" />
 </div>
