--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -35,7 +35,7 @@
         <wc-srs-questionaire></wc-srs-questionaire>
       </div>
       <div ng-show="!inQuestionaireState">
-        result
+        <wc-srs-result></wc-srs-result>
       </div>
       
     </div>
