INTYG-4274: Uppdaterat cookie banner texten

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/cookiebanner/wcCookieBanner.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/cookiebanner/wcCookieBanner.directive.html
@@ -12,12 +12,12 @@
             </p>
 
             <p>I Webcert används sessionskakor för att du ska kunna navigera i tjänsten utan att behöva logga in på
-              nytt varje gång du går till en ny sida. De används också för att de filterinställningar du gör skall finnas kvar under hela tiden du är inloggad.
+              nytt varje gång du går till en ny sida. De används också för att de filterinställningar du gör ska finnas kvar under hela tiden du är inloggad.
               För att vara säker på att kakorna inte sparas i din dator efter
               avslutad session måste du stänga webbläsaren när du har loggat ut.</p>
 
             <p>Om du inte accepterar användningen av kakor kan du ställa in webbläsaren så att kakor blockeras.
-              Observera att du då inte kommer kunna logga in i Webcert igen när du har avslutat den nuvarande sessionen och stängt webbläsaren.</p>
+              <strong>Observera att det då inte går att logga in.</strong></p>
 
             <p>Mer information om kakor (cookies) på <span dynamiclink key="ptsCookiesBanner"></span></p>
 
