INTYG-4100: Nytt direktiv wc-intyg-has-komplettering-message som informerar i intygs-headerom ett signerat intyg har kompletteringar. (funkar ej på fk7263 eftersom dess kompletteringar inte sätts i common.kompletteringar fn)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -184,7 +184,7 @@
         <span ng-if="!viewState.common.intygProperties.isSent && !viewState.common.isIntygOnSendQueue" id="certificate-is-sent-to-it-message-text" message key="{{intygstyp}}.label.status.signed"></span>
         <span ng-if="!viewState.common.intygProperties.isSent && viewState.common.isIntygOnSendQueue" id="certificate-is-on-sendqueue-to-it-message-text" message key="{{intygstyp}}.label.status.sent"></span>
       </div>
-
+      <wc-intyg-has-komplettering-message></wc-intyg-has-komplettering-message>
       <div wc-patient-info-change-message></div>
 
       <div ng-if="viewState.common.intygProperties.isRevoked || viewState.common.isIntygOnRevokeQueue" id="certificate-is-revoked-message-text" class="alert alert-warning"
