INTYG-4277: fältnr i rubriker även i uv-wc, rättning av missade scss regler

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/js/directives/fk7263.SelectableFieldList.directive.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/js/directives/fk7263.SelectableFieldList.directive.html
@@ -1,7 +1,7 @@
 <div class="selectable-field-list">
 
   <!-- Fält 1: Smittskydd -->
-  <selectable-category-wrapper category-label="fk7263.label.smittskydd" cert-model="cert"
+  <selectable-category-wrapper category-label="fk7263.label.smittskydd.kategori" cert-model="cert"
                                field-configs="[fieldConfig.smittskydd]" summary="summary">
     <div selectable-field-wrapper
 
@@ -196,7 +196,7 @@
   </selectable-category-wrapper>
 
   <!-- Fält 8b:  Bedömd arbetsförmåga -->
-  <selectable-category-wrapper category-label="fk7263.label.nedsattning" cert-model="cert"
+  <selectable-category-wrapper category-label="fk7263.label.nedsattning.falt8b" cert-model="cert"
                                field-configs="[fieldConfig.bedomdArbetsFormaga]" summary="summary">
     <div selectable-field-wrapper label-key="{{summary ? 'fk7263.label.nedsattning' : ''}}" cert-model="cert"
          field-config="fieldConfig.bedomdArbetsFormaga" summary="summary" show-deselected="showDeselected">
