--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -25,6 +25,8 @@
                 <div id="certificate" class="row certificate">
                   <div class="col-md-12 intyg-body">
 
+                    <wc-intyg-has-komplettering-message></wc-intyg-has-komplettering-message>
+
                     <div ui-view="formly"/>
 
                     <!-- 12. Sign doktor -->
