INTYG-4104: Removed some old komplettering elements.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
@@ -9,7 +9,7 @@
       <span wc-help-chevron-text help-text-key="{{to.label + '.HLP'}}"></span>
     </span>
 
-    <wc-utkast-komplettering key="{{options.key}}" margin-top="true"></wc-utkast-komplettering>
+    <!--wc-utkast-komplettering key="{{options.key}}" margin-top="true"></wc-utkast-komplettering-->
   </div>
   <div class="col-md-6">
     <span wc-date-picker-field target-model="model[options.key]" add-date-parser="loose" on-blur="validate()"
