--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/radioGroup.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/radioGroup.formly.html
@@ -8,7 +8,7 @@
     </label>
   </div>
 
-  <wc-utkast-komplettering key="{{options.key}}"></wc-utkast-komplettering>
+  <!--wc-utkast-komplettering key="{{options.key}}"></wc-utkast-komplettering-->
 
   <div data-ng-repeat="choice in to.choices">
     <label class="radio">
