--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleTextVertical.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleTextVertical.formly.html
@@ -11,7 +11,7 @@
     </span>
   </div>
 
-  <wc-utkast-komplettering key="{{options.key}}" margin-top="true" margin-bottom="true"></wc-utkast-komplettering>
+  <!--wc-utkast-komplettering key="{{options.key}}" margin-top="true" margin-bottom="true"></wc-utkast-komplettering-->
 
   <div>
     <input id="{{options.key}}" type="text" class="form-control" ng-disabled="to.disabled" ng-model="model[options.key]"
