--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
@@ -3,8 +3,8 @@
     <span dynamic-label key="{{to.label}}.RBK"></span> <span class="required">*</span>
   </h4>
 
-  <wc-utkast-komplettering key="{{options.key}}" komplettering-key="{{to.kompletteringKey}}"
-                           margin-bottom="true"></wc-utkast-komplettering>
+  <!--wc-utkast-komplettering key="{{options.key}}" komplettering-key="{{to.kompletteringKey}}"
+                           margin-bottom="true"></wc-utkast-komplettering-->
 
   <div class="sjukskrivningar-section">
     <span dynamic-label key="{{to.label}}.HLP"></span>
