--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
@@ -1,4 +1,4 @@
-<div ng-show="model.underlagFinns" ng-class="{'groupkomplettering' : hasKomplettering()}">
+<div ng-show="model.underlagFinns">
   <label class="control-label inline-block bold" ng-if="to.label">
     <span dynamic-label key="{{to.label}}.RBK"></span> *
     <span wc-help-chevron help-text-key="{{to.label}}.HLP"></span>
