--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFragaKomplettering.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFragaKomplettering.directive.html
@@ -1,3 +1,3 @@
-<div ng-class="{ 'komplettering-active' : hasKompletteringar() }">
+<div class="wc-fraga" ng-class="{ 'komplettering-active' : hasKompletteringar() }">
   <ng-transclude></ng-transclude>
 </div>
