--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
@@ -6,7 +6,7 @@
   </label>
   <span wc-help-chevron-text help-text-key="FRG_{{to.frgId}}.HLP"></span>
 
-  <wc-utkast-komplettering key="{{options.key}}" margin-top="true"></wc-utkast-komplettering>
+  <!--wc-utkast-komplettering key="{{options.key}}" margin-top="true"></wc-utkast-komplettering-->
 
   <div ng-if="to.open" class="fold-animation">
     <label class="control-label inline-block webcert-top-padding-section" ng-class="{'bold' : to.bold}">
