--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkboxInline.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkboxInline.formly.html
@@ -1,5 +1,5 @@
 <div>
-  <wc-utkast-komplettering key="{{options.key}}" margin-bottom="true"></wc-utkast-komplettering>
+  <!--wc-utkast-komplettering key="{{options.key}}" margin-bottom="true"></wc-utkast-komplettering-->
   <label class="big-checkbox-label checkbox" ng-class="{'bold': to.bold}">
     <input type="checkbox" class="big-checkbox" ng-model="model[options.key]">
     <span dynamic-label key="{{to.label}}.RBK"></span>
