--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.html
@@ -1,4 +1,4 @@
-<wc-utkast-komplettering key="{{options.key}}" margin-bottom="true"></wc-utkast-komplettering>
+<!--wc-utkast-komplettering key="{{options.key}}" margin-bottom="true"></wc-utkast-komplettering-->
 <div class="row bottom-padding-small">
     <div class='col-xs-12'>
         <div class="form-group">
@@ -18,7 +18,7 @@
     </div>
 </div>
 
-<div ng-class="{'groupkomplettering' : hasKomplettering()}">
+<div>
     <table>
         <tr>
             <th>
