--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/prognos.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/prognos.formly.html
@@ -3,7 +3,7 @@
     <wc-form-label to="to" key="options.key"></wc-form-label>
   </div>
 
-  <wc-utkast-komplettering key="{{options.key}}" komplettering-key="{{to.kompletteringKey}}" margin-bottom="true"></wc-utkast-komplettering>
+  <!--wc-utkast-komplettering key="{{options.key}}" komplettering-key="{{to.kompletteringKey}}" margin-bottom="true"></wc-utkast-komplettering-->
 
   <wc-validation-group field-type="radio-group"
                        validations="formState.viewState.common.validation.messagesByField[options.key]"
