--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/wcFieldStatic.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/wcFieldStatic.formly.html
@@ -4,6 +4,8 @@
      field-label="{{to.staticLabel}}"
      field-help-text="{{to.staticHelp}}"
      field-has-errors="formState.viewState.common.validation.messagesGrouped[to.categoryName]" class="field-fade">
-    <formly-transclude></formly-transclude>
+    <div class="wc-fraga">
+      <formly-transclude></formly-transclude>
+    </div>
   </div>
 </div>
