--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/wcFraga.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/wcFraga.formly.html
@@ -1,4 +1,5 @@
 <wc-fraga-komplettering frage-id="to.frageId">
+  <a id="komplettering_{{to.frageId}}"></a>
   <formly-transclude></formly-transclude>
   <wc-inline-komplettering frage-id="to.frageId"></wc-inline-komplettering>
 </wc-fraga-komplettering>
