INTYG-4104: Tog bort fieldkomplettering och hasKompletteringar och alla referenser.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/prognos.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/prognos.formly.html
@@ -4,8 +4,7 @@
   </div>
 
   <wc-validation-group field-type="radio-group"
-                       validations="formState.viewState.common.validation.messagesByField[options.key]"
-                       kompletteringar="hasKompletteringar()">
+                       validations="formState.viewState.common.validation.messagesByField[options.key]">
     <div class="form-group form-inline" data-ng-repeat="choice in to.choices">
 
       <label class="radio">
