--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcValidationGroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcValidationGroup.directive.html
@@ -1,4 +1,4 @@
-<div ng-class="{'grouperror' : validations, 'groupkomplettering' : kompletteringar}">
+<div ng-class="{'grouperror' : validations}">
   <ng-transclude></ng-transclude>
   <wc-field-validation field-type="{{fieldType}}" validations="validations" warnings="warnings"></wc-field-validation>
 </div>
