--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcValidationWrapper.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcValidationWrapper.directive.html
@@ -1,4 +1,4 @@
-<div ng-class="{'fielderror' : validations, 'fieldkomplettering' : hasKomplettering()}">
+<div ng-class="{'fielderror' : validations}">
   <ng-transclude></ng-transclude>
   <wc-field-validation
       field-type="{{fieldType}}"
