--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
@@ -21,8 +21,7 @@
 
   <wc-validation-group field-type="{{to.type}}"
                        validations="formState.viewState.common.validation.messagesByField[options.key]"
-                       warnings="formState.viewState.common.validation.warningMessagesByField[options.key]"
-                       kompletteringar="hasKompletteringar()">
+                       warnings="formState.viewState.common.validation.warningMessagesByField[options.key]">
 
     <div class="form-horizontal sjukskrivningar-section clearfix" data-ng-repeat="field in to.fields">
       <div class="row">
