INTYG-4319: Rättat fältlabel för fk7263 Fält 4b i anpassaflödet

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/js/directives/fk7263.SelectableFieldList.directive.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/js/directives/fk7263.SelectableFieldList.directive.html
@@ -54,7 +54,7 @@
                                field-configs="[fieldConfig.intygetBaserasPa]" summary="summary">
 
 
-    <div selectable-field-wrapper label-key="{{summary ? 'fk7263.label.disabilities' : ''}}"
+    <div selectable-field-wrapper label-key="{{summary ? 'fk7263.label.basedon' : ''}}"
 
          cert-model="cert" field-config="fieldConfig.intygetBaserasPa" summary="summary"
          show-deselected="showDeselected">
