INTYG-4236: Caret-fold-out help texts saknades för staticHelpIds (extra virtuella fält som överförs till Övriga upplysningar)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFormLabel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFormLabel.directive.html
@@ -33,6 +33,7 @@
       <span ng-if="to.staticHelpId" wc-help-chevron help-text-key="{{to.staticHelpId}}"></span>
     </label>
     <span ng-if="to.label" wc-help-chevron-text help-text-key="{{to.label}}.HLP"></span>
+    <span ng-if="to.staticHelpId" wc-help-chevron-text help-text-key="{{to.staticHelpId}}"></span>
   </span>
 
 </div>
