INTYG-4076: Lagt till de fält som förs över till "Övriga upplysningar" i viewconfig för fk-intygen.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFormLabel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFormLabel.directive.html
@@ -9,6 +9,7 @@
       <span ng-if="to.staticHelpId" wc-help-chevron help-text-key="{{to.staticHelpId}}"></span>
     </h4>
     <span ng-if="hlpFrageId" wc-help-chevron-text help-text-key="{{hlpFrageId}}.HLP"></span>
+    <span ng-if="to.staticHelpId" wc-help-chevron-text help-text-key="{{to.staticHelpId}}"></span>
   </span>
 
   <span ng-if="delFrageId && !to.forceHeadingTypeLabel">
@@ -21,6 +22,7 @@
       <span ng-if="to.staticHelpId" wc-help-chevron help-text-key="{{to.staticHelpId}}"></span>
     </h5>
     <span ng-if="delFrageId" wc-help-chevron-text help-text-key="{{delFrageId}}.HLP"></span>
+    <span ng-if="to.staticHelpId" wc-help-chevron-text help-text-key="{{to.staticHelpId}}"></span>
   </span>
 
   <span ng-if="to.forceHeadingTypeLabel">
