--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvWcFraga/uvWcFraga.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvWcFraga/uvWcFraga.directive.html
@@ -1,4 +1,5 @@
 <div ng-class="{ 'uv-wc-fraga-komplettering' : hasKompletteringar() }">
+  <a ng-attr-id="komplettering_{{kompletteringsId}}"></a>
   <h3><span ng-attr-id="{{config.type + '-label-' + config.labelKey | uvDomIdFilter}}" dynamic-label
             key="{{ config.labelKey }}"></span></h3>
   <div class="fraga-body">
