INTYG-4237: Hanterar nu ikoner och texter för avliden och sekretessmarkering korrekt

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygPatientNamnPersonnummer.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygPatientNamnPersonnummer.directive.html
@@ -1,6 +1,5 @@
 <span>
   <label class="control-label" id="patientNamnPersonnummer">
-    <span ng-if="patientDeceased"
-          class="glyphicon glyphicon-ban-circle mark-webcert-red"></span> {{ patientName }} - {{ personId | PersonIdFormatter }}
-  </label> <span ng-if="patientDeceased" class="mark-webcert-red">OBS! Patienten har avlidit.</span>
+ {{ patientName }} - {{ personId | PersonIdFormatter }}
+  </label>
 </span>
