--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -39,9 +39,9 @@
         <div class="inline-block" style="margin-right:10px"
              wc-intyg-patient-namn-personnummer
              patient-name="viewState.intygModel.grundData.patient.fullstandigtNamn"
-             patient-deceased="isPatientDeceased()"
              person-id="viewState.intygModel.grundData.patient.personId">
         </div>
+        <span wc-sekretess-avliden printlabel="true" avliden="viewState.intygModel.grundData.patient.avliden" sekretessmarkering="viewState.intygModel.grundData.patient.sekretessmarkering"></span>
       </div>
       <div class="form-group">
         <div class="btn-row">
