--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -26,20 +26,29 @@
                                                                 class="backlink-icon glyphicon glyphicon-arrow-left"></a>
                 <span>{{intygsnamn}}</span><span wc-help-chevron help-text-key="FRM_2.RBK"></span>
               </h1>
-              <div wc-intyg-patient-namn-personnummer
-                   patient-name="viewState.intygModel.grundData.patient.fullstandigtNamn"
-                   person-id="viewState.intygModel.grundData.patient.personId" class="utkast-header-person-id"></div>
 
+               <div style="float:right;">
+                    <div wc-intyg-patient-namn-personnummer
+                         patient-name="viewState.intygModel.grundData.patient.fullstandigtNamn"
+                         person-id="viewState.intygModel.grundData.patient.personId"
+                         class="utkast-header-person-id"></div>
+
+                    <br>
+                    <span wc-sekretess-avliden printlabel="true"
+                          avliden="viewState.intygModel.grundData.patient.avliden"
+                          sekretessmarkering="viewState.intygModel.grundData.patient.sekretessmarkering"></span>
+
+               </div>
               <span wc-help-chevron-text help-text-key="FRM_2.RBK"></span>
 
+
               <div class="form-group buttonbar">
-                <button type="button" id="skriv-ut-utkast" class="btn btn-info"
-                        ng-if="!viewState.common.isSigned" ng-click="print()" title="Skriver ut utkastet.">
+                <button type="button" id="skriv-ut-utkast" class="btn btn-info" ng-if="!viewState.common.isSigned"
+                        ng-click="print()" title="Skriver ut utkastet.">
                   <i class="glyphicon glyphicon-print"></i>
                 </button>
-                <button type="button" id="ta-bort-utkast" class="btn btn-info"
-                        ng-if="!viewState.common.isSigned" ng-click="discard()"
-                        title="Klicka på papperskorgen för att radera utkastet.">
+                <button type="button" id="ta-bort-utkast" class="btn btn-info" ng-if="!viewState.common.isSigned"
+                        ng-click="discard()" title="Klicka på papperskorgen för att radera utkastet.">
                   <i class="glyphicon glyphicon-trash"></i>
                 </button>
 
@@ -50,7 +59,8 @@
                     <span message key="draft.status.signed"></span>
                   </span>
                   <!-- complete -->
-                  <span ng-if="!viewState.common.saving && certForm.$pristine && viewState.common.intyg.isComplete && !viewState.common.isSigned">
+                  <span
+                      ng-if="!viewState.common.saving && certForm.$pristine && viewState.common.intyg.isComplete && !viewState.common.isSigned">
                     <span id="intyget-sparat-och-komplett-meddelande" message key="draft.status.complete"></span>
                   </span>
                   <!-- incomplete -->
@@ -58,7 +68,8 @@
                     <span id="intyget-sparat-och-ej-komplett-meddelande" message key="draft.status.incomplete"></span>
                   </span>
                   <!-- form changed -->
-                  <span ng-if="viewState.common.saving || certForm.$dirty"><span message key="draft.status.changed"></span>
+                  <span ng-if="viewState.common.saving || certForm.$dirty"><span message
+                                                                                 key="draft.status.changed"></span>
                   </span>
                 </span>
 
@@ -70,11 +81,11 @@
             </div>
             <div class="clearfix"></div>
 
-            <!-- Error/info messages -->
+            <!-- Error/info messages -
             <div wc-secrecy-mark-message
                  person-id="viewState.intygModel.grundData.patient.personId"
                  type="utkast"></div>
-
+             ->
             <div ng-show="viewState.common.error.saveErrorCode != null" class="padding-top-medium">
               <div class="alert alert-danger no-margin">
                 <span ng-bind-html="viewState.common.error.saveErrorMessage"></span>
@@ -89,10 +100,10 @@
   </div>
 
   <!-- Total fail error messages -->
-  <div id="error-panel" class="intyg-error-panel"
-       ng-show="viewState.common.doneLoading && viewState.common.error.activeErrorMessageKey && !viewState.common.deleted">
-    <div class="alert alert-danger">
-      <span message key="{{viewState.common.error.activeErrorMessageKey}}"></span>
-    </div>
-  </div>
-</div>
+            <div id="error-panel" class="intyg-error-panel"
+                 ng-show="viewState.common.doneLoading && viewState.common.error.activeErrorMessageKey && !viewState.common.deleted">
+              <div class="alert alert-danger">
+                <span message key="{{viewState.common.error.activeErrorMessageKey}}"></span>
+              </div>
+            </div>
+          </div>
