INTYG-4364: Textkolumner i headern på MI anpassa intyg (lisjp/fk7263) flödena stackas nu i mobilläge.

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/js/directives/fk7263.SelectableFieldList.directive.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/js/directives/fk7263.SelectableFieldList.directive.html
@@ -198,7 +198,7 @@
   <!-- Fält 8b:  Bedömd arbetsförmåga -->
   <selectable-category-wrapper category-label="fk7263.label.nedsattning.falt8b" cert-model="cert"
                                field-configs="[fieldConfig.bedomdArbetsFormaga]" summary="summary">
-    <div selectable-field-wrapper label-key="{{summary ? 'fk7263.label.nedsattning' : ''}}" cert-model="cert"
+    <div selectable-field-wrapper label-key="{{summary ? 'fk7263.label.nedsattning.falt8b' : ''}}" cert-model="cert"
          field-config="fieldConfig.bedomdArbetsFormaga" summary="summary" show-deselected="showDeselected">
       <table class="table table-striped">
         <tr>
