INTYG-4202: Padding mellan delfrågor

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFormLabel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFormLabel.directive.html
@@ -1,4 +1,4 @@
-<div>
+<div class="wcFormLabel">
   <span ng-if="frageId && !to.forceHeadingTypeLabel" ng-class="{'noH5After': !delFrageId}">
     <h4>
       <span ng-if="frageId" dynamic-label key="{{frageId}}.RBK"></span>
