--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/radioGroup.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/radioGroup.formly.html
@@ -1,14 +1,6 @@
-<div class="form-inline">
-  <div>
-    <label class="inline-block" ng-class="{'bold' : to.bold}">
-      <span dynamic-label key="{{to.label}}.RBK"></span>
-      {{to.required ? '*' : ''}}
-      <span wc-help-chevron help-text-key="{{to.label}}.HLP"></span>
-      <span wc-help-chevron-text help-text-key="{{to.label}}.HLP"></span>
-    </label>
-  </div>
-
-  <div data-ng-repeat="choice in to.choices">
+<div class="form-group">
+  <wc-form-label to="to" key="options.key"></wc-form-label>
+  <div class="form-group form-inline" data-ng-repeat="choice in to.choices">
     <label class="radio">
       <input id="{{options.key}}-{{choice}}" type="radio" name="{{options.key}}" class="big-radio" ng-model="model[options.key]" value="{{choice}}">
       <span dynamic-label key="{{to.code}}.{{choice}}.RBK"></span>
