--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleTextVertical.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleTextVertical.formly.html
@@ -1,15 +1,5 @@
 <div class="input-full" ng-class="{'indent' : to.indent, 'bold' : to.bold}">
-  <div class="control-label">
-    <label class="form-control-label">
-      <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
-      <span ng-if="to.staticLabel">{{to.staticLabel}}</span>
-      <span class="required">{{to.required ? '*' : ''}}</span>
-    </label>
-    <span ng-if="to.help">
-      <span wc-help-chevron help-text-key="{{to.help}}.HLP"></span>
-      <span wc-help-chevron-text help-text-key="{{to.help}}.HLP"></span>
-    </span>
-  </div>
+  <wc-form-label to="to" key="options.key"></wc-form-label>
   <div>
     <input id="{{options.key}}" type="text" class="form-control" ng-disabled="to.disabled" ng-model="model[options.key]"
            ng-class="{ 'input-{{to.size}}': to.size }" maxlength="4000">
